// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accessibility doesnt render tables if there is no data 1`] = `
<DocumentFragment>
  .emotion-2 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-2 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-2 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-0 {
  box-sizing: border-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-0 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:480px) {
  .emotion-0 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:768px) {
  .emotion-0 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-0 {
    margin: -80px -12px 0 -12px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    margin: -80px -12px 0 -12px;
  }
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accessibility renders aria interactions table if data is provided 1`] = `
<DocumentFragment>
  .emotion-22 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-22 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-22 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-21 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-20 {
  box-sizing: border-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-20 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:480px) {
  .emotion-20 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:768px) {
  .emotion-20 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-20 {
    margin: -80px -12px 0 -12px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-20 {
    margin: -80px -12px 0 -12px;
  }
}

.emotion-19 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-19 {
    padding: 0 8px;
    margin-top: 80px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:768px) {
  .emotion-19 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-19 {
    padding: 0 12px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width:767px) {
  .emotion-1 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .emotion-1 {
    margin-bottom: 20px;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-0 svg {
  fill: #162740;
}

@media screen and (max-width:1439px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.24062499999999998em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.490625em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20729166666666665em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.45729166666666665em;
  }
}

.emotion-18 {
  margin-bottom: 32px;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-2 svg {
  fill: #555E74;
}

@media screen and (max-width:1439px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.33229166666666665em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36354166666666665em;
  }
}

.emotion-17 {
  overflow-x: auto;
}

.emotion-16 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-4 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-15 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-10 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-3 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
}

.emotion-7 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-9 {
  margin-left: 0px;
}

.emotion-8 {
  margin: 0;
  padding: 0;
  color: #555E74;
  white-space: nowrap;
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.5;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-8 svg {
  fill: #555E74;
}

<div
    class="emotion-22"
  >
    <div
      class="emotion-21"
    >
      <div
        class="emotion-20"
      >
        <div
          class="emotion-19"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              WAI-ARIA
            </span>
          </div>
          <div
            class="emotion-18"
          >
            <p
              class="emotion-2"
            >
              Some random text
            </p>
            <div
              class="emotion-17"
            >
              <table
                class="emotion-16"
              >
                <thead>
                  <tr>
                    <th
                      class="emotion-3"
                    >
                      Category
                    </th>
                    <th
                      class="emotion-4"
                    >
                      Attribute
                    </th>
                    <th
                      class="emotion-4"
                    >
                      Value
                    </th>
                    <th
                      class="emotion-4"
                    >
                      Description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="emotion-15"
                  >
                    <td
                      class="emotion-7"
                    >
                      2
                    </td>
                    <td
                      class="emotion-10"
                    >
                      <div
                        class="emotion-9"
                      >
                        <p
                          class="emotion-8"
                        >
                          description
                        </p>
                      </div>
                    </td>
                    <td
                      class="emotion-10"
                    >
                      <div
                        class="emotion-12"
                      >
                        <p
                          class="emotion-8"
                        >
                          value
                        </p>
                      </div>
                    </td>
                    <td
                      class="emotion-10"
                    >
                      description
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <p />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accessibility renders focus order table with keyCombo if data is provided 1`] = `
<DocumentFragment>
  .emotion-21 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-21 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-21 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-20 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-19 {
  box-sizing: border-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-19 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:480px) {
  .emotion-19 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:768px) {
  .emotion-19 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-19 {
    margin: -80px -12px 0 -12px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-19 {
    margin: -80px -12px 0 -12px;
  }
}

.emotion-18 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-18 {
    padding: 0 8px;
    margin-top: 80px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:768px) {
  .emotion-18 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-18 {
    padding: 0 12px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width:767px) {
  .emotion-1 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .emotion-1 {
    margin-bottom: 20px;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-0 svg {
  fill: #162740;
}

@media screen and (max-width:1439px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.24062499999999998em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.490625em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20729166666666665em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.45729166666666665em;
  }
}

.emotion-17 {
  margin-bottom: 32px;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-2 svg {
  fill: #555E74;
}

@media screen and (max-width:1439px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.33229166666666665em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36354166666666665em;
  }
}

.emotion-16 {
  overflow-x: auto;
}

.emotion-15 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-3 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-4 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-14 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-11 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 24px;
  height: 24px;
}

.emotion-9 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #FFFFFF;
  background-color: #577FFB;
  border-radius: 20rem;
  white-space: nowrap;
}

.emotion-9 svg {
  width: 16px;
  height: 16px;
}

.emotion-9 svg {
  fill: #FFFFFF;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-7 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 600;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.2549107142857143em + 1.2px);
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5049107142857143em;
}

.emotion-12 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  white-space: nowrap;
  vertical-align: top;
}

.emotion-13 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

<div
    class="emotion-21"
  >
    <div
      class="emotion-20"
    >
      <div
        class="emotion-19"
      >
        <div
          class="emotion-18"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              Focus order
            </span>
          </div>
          <div
            class="emotion-17"
          >
            <p
              class="emotion-2"
            >
              Some random text here
            </p>
            <div
              class="emotion-16"
            >
              <table
                class="emotion-15"
              >
                <thead>
                  <tr>
                    <th
                      class="emotion-3"
                    >
                      Order
                    </th>
                    <th
                      class="emotion-4"
                    >
                      Element
                    </th>
                    <th
                      class="emotion-4"
                    >
                      Role
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="emotion-14"
                  >
                    <td
                      class="emotion-11"
                    >
                      <div
                        class="emotion-10"
                      >
                        <div
                          class="emotion-9"
                          data-testid="flag"
                        >
                          <div
                            class="emotion-8"
                          >
                            <div
                              class="emotion-7"
                            >
                              <span
                                class="emotion-6"
                              >
                                1
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="emotion-12"
                    >
                      element
                    </td>
                    <td
                      class="emotion-13"
                    >
                      Role
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <p />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accessibility renders keyboard interactions table with keyCombo if data is provided 1`] = `
<DocumentFragment>
  .emotion-32 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-32 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-32 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-31 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-30 {
  box-sizing: border-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-30 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:480px) {
  .emotion-30 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:768px) {
  .emotion-30 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-30 {
    margin: -80px -12px 0 -12px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-30 {
    margin: -80px -12px 0 -12px;
  }
}

.emotion-29 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-29 {
    padding: 0 8px;
    margin-top: 80px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:768px) {
  .emotion-29 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-29 {
    padding: 0 12px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width:767px) {
  .emotion-1 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .emotion-1 {
    margin-bottom: 20px;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-0 svg {
  fill: #162740;
}

@media screen and (max-width:1439px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.24062499999999998em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.490625em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20729166666666665em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.45729166666666665em;
  }
}

.emotion-28 {
  margin-bottom: 32px;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-2 svg {
  fill: #555E74;
}

@media screen and (max-width:1439px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.33229166666666665em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36354166666666665em;
  }
}

.emotion-27 {
  overflow-x: auto;
}

.emotion-26 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-3 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-4 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-25 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-24 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-23 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  white-space: nowrap;
  vertical-align: top;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-11 {
    max-width: 100%;
  }
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #555E74;
  background-color: #F4F4F4;
  border-radius: 4px;
  white-space: nowrap;
  margin-top: -4px;
}

.emotion-9 svg {
  width: 16px;
  height: 16px;
}

.emotion-9 svg {
  fill: #555E74;
}

.emotion-6 {
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.4285714285714286;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4267857142857143em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3642857142857143em;
}

.emotion-12 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-12.emotion-12 {
  width: 16px;
  height: 16px;
}

<div
    class="emotion-32"
  >
    <div
      class="emotion-31"
    >
      <div
        class="emotion-30"
      >
        <div
          class="emotion-29"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              Keyboard Interactions
            </span>
          </div>
          <div
            class="emotion-28"
          >
            <p
              class="emotion-2"
            >
              Some random text
            </p>
            <div
              class="emotion-27"
            >
              <table
                class="emotion-26"
              >
                <thead>
                  <tr>
                    <th
                      class="emotion-3"
                    >
                      Command
                    </th>
                    <th
                      class="emotion-4"
                    >
                      Description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="emotion-25"
                  >
                    <td
                      class="emotion-23"
                    >
                      <div
                        class="emotion-22"
                      >
                        <div
                          class="emotion-11"
                        >
                          <div
                            class="emotion-10"
                          >
                            <div
                              class="emotion-9"
                              data-testid="flag"
                            >
                              <div
                                class="emotion-8"
                              >
                                <div
                                  class="emotion-5"
                                />
                                <div
                                  class="emotion-5"
                                >
                                  <span
                                    class="emotion-6"
                                  >
                                    ctrl
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="emotion-11"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-12 emotion-13"
                            fill="currentColor"
                            focusable="false"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-11"
                        >
                          <div
                            class="emotion-10"
                          >
                            <div
                              class="emotion-9"
                              data-testid="flag"
                            >
                              <div
                                class="emotion-8"
                              >
                                <div
                                  class="emotion-5"
                                />
                                <div
                                  class="emotion-5"
                                >
                                  <span
                                    class="emotion-6"
                                  >
                                    esc
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="emotion-24"
                    >
                      description
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <p />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
